--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
 <title>Page Title</title>
 </head>
+<meta property="og:image" content="https://img.freepik.com/free-psd/coupon-mockup-falling_1332-12660.jpg?w=200">
+  <meta content="25% off your first year and a free Health MOT" property="og:title">
 <body>
 
 <h1>This is a Heading</h1>
