--- a/index.html
+++ b/index.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>Page Title</title>
-</head>
-<meta property="og:image" content="https://img.freepik.com/free-psd/coupon-mockup-falling_1332-12660.jpg?w=200">
-  <meta content="25% off your first year and a free Health MOT" property="og:title">
 <body>
 
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
+<h1>The iframe srcdoc attribute</h1>
+
+<iframe srcdoc="<p>Hello world!</p>" src="demo_iframe_srcdoc.htm">
+  <p>Your browser does not support iframes.</p>
+</iframe>
 
 </body>
 </html>
