--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <h1>The iframe srcdoc attribute</h1>
 
-<iframe srcdoc="<p>Hello world!</p>" >
+<iframe srcdoc="<p>Hello world!</p>" src="demo_iframe_srcdoc.htm">
   <p>Your browser does not support iframes.</p>
 </iframe>
 
